[BUG-11] "Default sorting" tab misalignment in empty categories

--- a/frontend/src/components/pages/BasicSearch/MainSearchPage.scss
+++ b/frontend/src/components/pages/BasicSearch/MainSearchPage.scss
@@ -165,6 +165,7 @@
 
                 .products-listview {
                     display: flex;
+                    width: 834px;
                     flex-direction: column;
                     gap: 24px;
                 }
